Add solar panel tilt angle and orientation parameters
- Add panel_tilt_angle parameter (0-90) for roof angle configuration
- Add panel_orientation parameter (0-359) with 0 = South orientation
- Update configuration flow with validation for new parameters:
  * Tilt angle: 0 to 90 (0 = flat, 90 = vertical)
  * Orientation: 0 to 359 (0 = South, 90 = West, 180 = North, 270 = East)
- Add parameter validation with user-friendly error messages
- Update translations for UI labels and error messages
- Include new parameters in sensor attributes with proper units ()
- Update coordinator to store and log new solar panel parameters
- Enhanced README documentation with parameter descriptions
- Add comprehensive test coverage for new constants
- All 8 tests passing

These parameters will enable more accurate solar calculations for site-specific installations, improving battery management decisions based on actual panel configuration.

--- a/custom_components/battery_management/translations/en.json
+++ b/custom_components/battery_management/translations/en.json
@@ -11,6 +11,8 @@
                     "pv_max_power": "PV Installation Max Power (kW)",
                     "battery_capacity": "Battery Capacity (kWh)",
                     "min_discharge_percentage": "Minimum Discharge Percentage (%)",
+                    "panel_tilt_angle": "Solar Panel Tilt Angle (°)",
+                    "panel_orientation": "Solar Panel Orientation (° from South)",
                     "update_interval": "Update Interval (seconds)",
                     "low_battery_threshold": "Low Battery Alert Threshold (%)"
                 }
@@ -22,6 +24,8 @@
             "discharge_too_low": "Discharge percentage cannot be negative",
             "power_invalid": "PV max power must be greater than 0 kW",
             "capacity_invalid": "Battery capacity must be greater than 0 kWh",
+            "tilt_angle_invalid": "Panel tilt angle must be between 0° and 90°",
+            "orientation_invalid": "Panel orientation must be between 0° and 359°",
             "username_required": "GROWATT username is required",
             "password_required": "GROWATT password is required"
         }
@@ -37,6 +41,8 @@
                     "pv_max_power": "PV Installation Max Power (kW)",
                     "battery_capacity": "Battery Capacity (kWh)",
                     "min_discharge_percentage": "Minimum Discharge Percentage (%)",
+                    "panel_tilt_angle": "Solar Panel Tilt Angle (°)",
+                    "panel_orientation": "Solar Panel Orientation (° from South)",
                     "update_interval": "Update Interval (seconds)",
                     "low_battery_threshold": "Low Battery Alert Threshold (%)"
                 }
